# name: TestUpdate.test[uvloop-force_reset][db]
  <class 'dict'> {
    '_id': 'bf1b993c',
    'active': True,
    'administrator': False,
    'force_reset': True,
    'groups': <class 'list'> [
      'peasants',
    ],
    'handle': 'leeashley',
    'invalidate_sessions': True,
    'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'primary_group': None,
    'settings': <class 'dict'> {
      'quick_analyze_workflow': 'pathoscope_bowtie',
      'show_ids': True,
      'show_versions': True,
      'skip_quick_analyze_dialog': True,
    },
  }
---
# name: TestUpdate.test[uvloop-force_reset][obj]
  <class 'dict'> {
    'active': True,
    'administrator': False,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': True,
    'groups': <class 'list'> [
      <class 'dict'> {
        'id': 'peasants',
        'name': 'peasants',
      },
    ],
    'handle': 'leeashley',
    'id': 'bf1b993c',
    'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'primary_group': None,
    'role': None,
  }
---
# name: TestUpdate.test[uvloop-groups][db]
  <class 'dict'> {
    '_id': 'bf1b993c',
    'active': True,
    'administrator': False,
    'force_reset': False,
    'groups': <class 'list'> [
      'peasants',
      'kings',
    ],
    'handle': 'leeashley',
    'invalidate_sessions': False,
    'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': True,
      'create_sample': True,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'primary_group': 'peasants',
    'settings': <class 'dict'> {
      'quick_analyze_workflow': 'pathoscope_bowtie',
      'show_ids': True,
      'show_versions': True,
      'skip_quick_analyze_dialog': True,
    },
  }
---
# name: TestUpdate.test[uvloop-groups][obj]
  <class 'dict'> {
    'active': True,
    'administrator': False,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': <class 'list'> [
      <class 'dict'> {
        'id': 'peasants',
        'name': 'peasants',
      },
      <class 'dict'> {
        'id': 'kings',
        'name': 'kings',
      },
    ],
    'handle': 'leeashley',
    'id': 'bf1b993c',
    'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': True,
      'create_sample': True,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'primary_group': <class 'dict'> {
      'id': 'peasants',
      'name': 'peasants',
    },
    'role': None,
  }
---
# name: TestUpdate.test_password[uvloop][db]
  <class 'dict'> {
    '_id': 'bf1b993c',
    'active': True,
    'administrator': False,
    'force_reset': False,
    'groups': <class 'list'> [
    ],
    'handle': 'leeashley',
    'invalidate_sessions': True,
    'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'primary_group': None,
    'settings': <class 'dict'> {
      'quick_analyze_workflow': 'pathoscope_bowtie',
      'show_ids': True,
      'show_versions': True,
      'skip_quick_analyze_dialog': True,
    },
  }
---
# name: TestUpdate.test_password[uvloop][obj]
  <class 'dict'> {
    'active': True,
    'administrator': False,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': <class 'list'> [
    ],
    'handle': 'leeashley',
    'id': 'bf1b993c',
    'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'primary_group': None,
    'role': None,
  }
---
# name: test_find_users[uvloop-False-None]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        '_id': 'da42dca3',
        'active': True,
        'administrator': False,
        'force_reset': False,
        'groups': <class 'list'> [
        ],
        'handle': 'diamond21',
        'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
        'permissions': <class 'dict'> {
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        },
        'role': None,
      },
    ],
    'found_count': 1,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  }
---
# name: test_find_users[uvloop-False-missing-handle]
  <class 'dict'> {
    'documents': <class 'list'> [
    ],
    'found_count': 0,
    'page': 1,
    'page_count': 0,
    'per_page': 25,
    'total_count': 3,
  }
---
# name: test_find_users[uvloop-False-test_user]
  <class 'dict'> {
    'documents': <class 'list'> [
    ],
    'found_count': 0,
    'page': 1,
    'page_count': 0,
    'per_page': 25,
    'total_count': 3,
  }
---
# name: test_find_users[uvloop-None-None]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        '_id': 'da42dca3',
        'active': True,
        'administrator': False,
        'force_reset': False,
        'groups': <class 'list'> [
        ],
        'handle': 'diamond21',
        'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
        'permissions': <class 'dict'> {
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        },
        'role': None,
      },
      <class 'dict'> {
        '_id': '3cbb22cc',
        'active': True,
        'administrator': False,
        'force_reset': False,
        'groups': <class 'list'> [
        ],
        'handle': 'juliewilliams',
        'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
        'permissions': <class 'dict'> {
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        },
        'role': 'full',
      },
      <class 'dict'> {
        '_id': '7cf872dc',
        'active': True,
        'administrator': False,
        'force_reset': False,
        'groups': <class 'list'> [
          <class 'dict'> {
            'id': 'fb085f7f',
            'name': 'hydrogeologists',
          },
          <class 'dict'> {
            'id': 'bf1b993c',
            'name': 'musicians',
          },
        ],
        'handle': 'test_user',
        'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
        'permissions': <class 'dict'> {
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        },
        'primary_group': <class 'dict'> {
          'id': 'bf1b993c',
          'name': 'musicians',
        },
        'role': 'base',
      },
    ],
    'found_count': 3,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  }
---
# name: test_find_users[uvloop-None-missing-handle]
  <class 'dict'> {
    'documents': <class 'list'> [
    ],
    'found_count': 0,
    'page': 1,
    'page_count': 0,
    'per_page': 25,
    'total_count': 3,
  }
---
# name: test_find_users[uvloop-None-test_user]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        '_id': '7cf872dc',
        'active': True,
        'administrator': False,
        'force_reset': False,
        'groups': <class 'list'> [
          <class 'dict'> {
            'id': 'fb085f7f',
            'name': 'hydrogeologists',
          },
          <class 'dict'> {
            'id': 'bf1b993c',
            'name': 'musicians',
          },
        ],
        'handle': 'test_user',
        'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
        'permissions': <class 'dict'> {
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        },
        'primary_group': <class 'dict'> {
          'id': 'bf1b993c',
          'name': 'musicians',
        },
        'role': 'base',
      },
    ],
    'found_count': 1,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  }
---
# name: test_find_users[uvloop-True-None]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        '_id': '3cbb22cc',
        'active': True,
        'administrator': False,
        'force_reset': False,
        'groups': <class 'list'> [
        ],
        'handle': 'juliewilliams',
        'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
        'permissions': <class 'dict'> {
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        },
        'role': 'full',
      },
      <class 'dict'> {
        '_id': '7cf872dc',
        'active': True,
        'administrator': False,
        'force_reset': False,
        'groups': <class 'list'> [
          <class 'dict'> {
            'id': 'fb085f7f',
            'name': 'hydrogeologists',
          },
          <class 'dict'> {
            'id': 'bf1b993c',
            'name': 'musicians',
          },
        ],
        'handle': 'test_user',
        'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
        'permissions': <class 'dict'> {
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        },
        'primary_group': <class 'dict'> {
          'id': 'bf1b993c',
          'name': 'musicians',
        },
        'role': 'base',
      },
    ],
    'found_count': 2,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  }
---
# name: test_find_users[uvloop-True-missing-handle]
  <class 'dict'> {
    'documents': <class 'list'> [
    ],
    'found_count': 0,
    'page': 1,
    'page_count': 0,
    'per_page': 25,
    'total_count': 3,
  }
---
# name: test_find_users[uvloop-True-test_user]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        '_id': '7cf872dc',
        'active': True,
        'administrator': False,
        'force_reset': False,
        'groups': <class 'list'> [
          <class 'dict'> {
            'id': 'fb085f7f',
            'name': 'hydrogeologists',
          },
          <class 'dict'> {
            'id': 'bf1b993c',
            'name': 'musicians',
          },
        ],
        'handle': 'test_user',
        'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
        'permissions': <class 'dict'> {
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        },
        'primary_group': <class 'dict'> {
          'id': 'bf1b993c',
          'name': 'musicians',
        },
        'role': 'base',
      },
    ],
    'found_count': 1,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  }
---
# name: test_get_user[uvloop-False]
  <class 'dict'> {
    'active': True,
    'administrator': False,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': <class 'list'> [
      GroupMinimal(id='bf1b993c', name='musicians'),
    ],
    'handle': 'test_user',
    'id': 'fb085f7f',
    'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
    'permissions': Permissions(cancel_job=False, create_ref=False, create_sample=False, modify_hmm=False, modify_subtraction=False, remove_file=False, remove_job=False, upload_file=False),
    'primary_group': GroupMinimal(id='bf1b993c', name='musicians'),
    'role': None,
  }
---
# name: test_get_user[uvloop-True]
  <class 'dict'> {
    'active': True,
    'administrator': False,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': <class 'list'> [
      GroupMinimal(id='bf1b993c', name='musicians'),
    ],
    'handle': 'test_user',
    'id': 'fb085f7f',
    'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
    'permissions': Permissions(cancel_job=False, create_ref=False, create_sample=False, modify_hmm=False, modify_subtraction=False, remove_file=False, remove_job=False, upload_file=False),
    'primary_group': GroupMinimal(id='bf1b993c', name='musicians'),
    'role': <AdministratorRole.BASE: 'base'>,
  }
---
# name: test_update_role[uvloop-None][obj]
  <class 'dict'> {
    'active': True,
    'administrator': False,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': <class 'list'> [
    ],
    'handle': 'leeashley',
    'id': 'bf1b993c',
    'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
    'permissions': Permissions(cancel_job=False, create_ref=False, create_sample=False, modify_hmm=False, modify_subtraction=False, remove_file=False, remove_job=False, upload_file=False),
    'primary_group': None,
    'role': None,
  }
---
# name: test_update_role[uvloop-base][obj]
  <class 'dict'> {
    'active': True,
    'administrator': False,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': <class 'list'> [
    ],
    'handle': 'leeashley',
    'id': 'bf1b993c',
    'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
    'permissions': Permissions(cancel_job=False, create_ref=False, create_sample=False, modify_hmm=False, modify_subtraction=False, remove_file=False, remove_job=False, upload_file=False),
    'primary_group': None,
    'role': <AdministratorRole.BASE: 'base'>,
  }
---
# name: test_update_role[uvloop-full][obj]
  <class 'dict'> {
    'active': True,
    'administrator': True,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': <class 'list'> [
    ],
    'handle': 'leeashley',
    'id': 'bf1b993c',
    'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
    'permissions': Permissions(cancel_job=False, create_ref=False, create_sample=False, modify_hmm=False, modify_subtraction=False, remove_file=False, remove_job=False, upload_file=False),
    'primary_group': None,
    'role': <AdministratorRole.FULL: 'full'>,
  }
---
